working with LiveActions, Squid Controller